{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 67,
  "lineage": "491d7c1d-0dad-8591-ab44-316b8902c535",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "tf-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/natGateways/dmgmt-natgw",
            "idle_timeout_in_minutes": 10,
            "location": "southeastasia",
            "name": "dmgmt-natgw",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "resource_guid": "6e0aa79e-3b39-4be5-a973-61e7162db416",
            "sku_name": "Standard"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/natGateways/dmgmt-natgw|/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/publicIPAddresses/dmgmt-natgwpubip",
            "nat_gateway_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/natGateways/dmgmt-natgw",
            "public_ip_address_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/publicIPAddresses/dmgmt-natgwpubip"
          },
          "dependencies": [
            "azurerm_nat_gateway.tf-natgw",
            "azurerm_public_ip.tf-dmgmtnatgwpubip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-dmgmtnwint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/networkInterfaces/dmgmtwin-nic",
            "internal_domain_name_suffix": "ulhm4ioc1q5uffnunvfaiisadh.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.80.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/sg-sea-Jumpboxsnet-sn"
              }
            ],
            "location": "southeastasia",
            "mac_address": "00-0D-3A-A1-6D-85",
            "name": "dmgmtwin-nic",
            "private_ip_address": "10.80.2.4",
            "private_ip_addresses": [
              "10.80.2.4"
            ],
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "virtual_machine_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Compute/virtualMachines/dmgmtwin-vm"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_subnet.tf-dmgmtsub",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-nonprdnwint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/networkInterfaces/nonprdlinux-nic",
            "internal_domain_name_suffix": "ggurye4xi3lerovfdofdhcphhg.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.80.8.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01/subnets/sg-sea-nonprd-subnet-01"
              }
            ],
            "location": "southeastasia",
            "mac_address": "00-22-48-55-79-54",
            "name": "nonprdlinux-nic",
            "private_ip_address": "10.80.8.4",
            "private_ip_addresses": [
              "10.80.8.4"
            ],
            "resource_group_name": "sg-sea-nonprd-rsg-01",
            "virtual_machine_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Compute/virtualMachines/Nonprd-Linux"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-netsecgrp-nonprd",
            "azurerm_subnet.tf-nonprdsubnet",
            "azurerm_subnet_network_security_group_association.tf-netsecgrpass-nonprd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-prdnwint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/networkInterfaces/prdlinux-nic",
            "internal_domain_name_suffix": "2lmelbfehjlezlhfrvpwrfapfb.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.80.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01/subnets/sg-sea-prd-vnet-01"
              }
            ],
            "location": "southeastasia",
            "mac_address": "00-22-48-56-3D-F2",
            "name": "prdlinux-nic",
            "private_ip_address": "10.80.4.4",
            "private_ip_addresses": [
              "10.80.4.4"
            ],
            "resource_group_name": "sg-sea-prd-rsg-01",
            "virtual_machine_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Compute/virtualMachines/Prd-Linux"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-netsecgrp-prd",
            "azurerm_resource_group.tf-rg",
            "azurerm_subnet.tf-prdsubnet",
            "azurerm_subnet_network_security_group_association.tf-netsecgrpass-prd",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-netsecgrp-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-dmgmt-netsecgrp-01",
            "location": "southeastasia",
            "name": "sg-sea-dmgmt-netsecgrp-01",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowICMPPing",
                "priority": 204,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSMBUsers",
                "priority": 203,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 202,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-netsecgrp-nonprd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-nonprd-netsecgrp-01",
            "location": "southeastasia",
            "name": "sg-sea-nonprd-netsecgrp-01",
            "resource_group_name": "sg-sea-nonprd-rsg-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 202,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-netsecgrp-prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-prd-netsecgrp-01",
            "location": "southeastasia",
            "name": "sg-sea-prd-netsecgrp-01",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 202,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-dmgmtnatgwpubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/publicIPAddresses/dmgmt-natgwpubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.194.121.95",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "dmgmt-natgwpubip",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-pubgw-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/publicIPAddresses/sg-sea-dmgmt-pubgw-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.194.120.255",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "sg-sea-dmgmt-pubgw-01",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-pubip-bas-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/publicIPAddresses/sg-sea-dmgmt-pubip-bas-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.194.121.94",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "sg-sea-dmgmt-pubip-bas-01",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-dmgmtsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.80.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "virtual_network_name": "sg-sea-dmgmt-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.80.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "virtual_network_name": "sg-sea-dmgmt-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.80.2.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/sg-sea-Jumpboxsnet-sn",
            "name": "sg-sea-Jumpboxsnet-sn",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "virtual_network_name": "sg-sea-dmgmt-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-nonprdsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.80.8.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01/subnets/sg-sea-nonprd-subnet-01",
            "name": "sg-sea-nonprd-subnet-01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sg-sea-nonprd-rsg-01",
            "virtual_network_name": "sg-sea-nonprd-vnet-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-prdsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.80.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01/subnets/sg-sea-prd-vnet-01",
            "name": "sg-sea-prd-vnet-01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sg-sea-prd-rsg-01",
            "virtual_network_name": "sg-sea-prd-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "tf-subnatgwass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/sg-sea-Jumpboxsnet-sn",
            "nat_gateway_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/natGateways/dmgmt-natgw",
            "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/sg-sea-Jumpboxsnet-sn"
          },
          "dependencies": [
            "azurerm_nat_gateway.tf-natgw",
            "azurerm_resource_group.tf-rg",
            "azurerm_subnet.tf-dmgmtsub",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-netsecgrpass-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/sg-sea-Jumpboxsnet-sn",
            "network_security_group_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-dmgmt-netsecgrp-01",
            "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/sg-sea-Jumpboxsnet-sn"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-netsecgrp-dmgmt",
            "azurerm_resource_group.tf-rg",
            "azurerm_subnet.tf-dmgmtsub",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-netsecgrpass-nonprd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01/subnets/sg-sea-nonprd-subnet-01",
            "network_security_group_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-nonprd-netsecgrp-01",
            "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01/subnets/sg-sea-nonprd-subnet-01"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-netsecgrp-nonprd",
            "azurerm_subnet.tf-nonprdsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-netsecgrpass-prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01/subnets/sg-sea-prd-vnet-01",
            "network_security_group_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-prd-netsecgrp-01",
            "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01/subnets/sg-sea-prd-vnet-01"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-netsecgrp-prd",
            "azurerm_resource_group.tf-rg",
            "azurerm_subnet.tf-prdsubnet",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.80.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "21cfcea2-dcc2-423f-95b4-6d4a0422401f",
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01",
            "location": "southeastasia",
            "name": "sg-sea-dmgmt-vnet-01",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "subnet": [
              {
                "address_prefix": "10.80.0.0/26",
                "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.80.1.0/26",
                "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.80.2.0/26",
                "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/sg-sea-Jumpboxsnet-sn",
                "name": "sg-sea-Jumpboxsnet-sn",
                "security_group": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-dmgmt-netsecgrp-01"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.80.4.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8445d8e2-3aa4-4c56-ace5-8d5f68940f29",
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01",
            "location": "southeastasia",
            "name": "sg-sea-prd-vnet-01",
            "resource_group_name": "sg-sea-prd-rsg-01",
            "subnet": [
              {
                "address_prefix": "10.80.4.0/24",
                "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01/subnets/sg-sea-prd-vnet-01",
                "name": "sg-sea-prd-vnet-01",
                "security_group": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-prd-netsecgrp-01"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.80.8.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "131ca931-47d7-4856-baa5-1b8a3389e73e",
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01",
            "location": "southeastasia",
            "name": "sg-sea-nonprd-vnet-01",
            "resource_group_name": "sg-sea-nonprd-rsg-01",
            "subnet": [
              {
                "address_prefix": "10.80.8.0/24",
                "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01/subnets/sg-sea-nonprd-subnet-01",
                "name": "sg-sea-nonprd-subnet-01",
                "security_group": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/networkSecurityGroups/sg-sea-nonprd-netsecgrp-01"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "tf-vnetgw-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.80.0.62"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "4.194.120.255"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworkGateways/sg-sea-dmgmt-vnetgw-01",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/publicIPAddresses/sg-sea-dmgmt-pubgw-01",
                "subnet_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/subnets/GatewaySubnet"
              }
            ],
            "location": "southeastasia",
            "name": "sg-sea-dmgmt-vnetgw-01",
            "private_ip_address_enabled": false,
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "sku": "VpnGw1",
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.tf-pubgw-dmgmt",
            "azurerm_resource_group.tf-rg",
            "azurerm_subnet.tf-dmgmtsub",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnet-peer1to2-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/virtualNetworkPeerings/sg-sea-dmgmt-peer1to2-01",
            "name": "sg-sea-dmgmt-peer1to2-01",
            "remote_virtual_network_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "use_remote_gateways": false,
            "virtual_network_name": "sg-sea-dmgmt-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnet-peer1to3-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01/virtualNetworkPeerings/sg-sea-dmgmt-peer1to3-01",
            "name": "sg-sea-dmgmt-peer1to3-01",
            "remote_virtual_network_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01",
            "resource_group_name": "sg-sea-dmgmt-rsg-01",
            "use_remote_gateways": false,
            "virtual_network_name": "sg-sea-dmgmt-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnet-peer2to1-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01/virtualNetworkPeerings/sg-sea-dmgmt-peer2to1-01",
            "name": "sg-sea-dmgmt-peer2to1-01",
            "remote_virtual_network_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01",
            "resource_group_name": "sg-sea-prd-rsg-01",
            "use_remote_gateways": false,
            "virtual_network_name": "sg-sea-prd-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnet-peer2to3-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01/virtualNetworkPeerings/sg-sea-dmgmt-peer2to3-01",
            "name": "sg-sea-dmgmt-peer2to3-01",
            "remote_virtual_network_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01",
            "resource_group_name": "sg-sea-prd-rsg-01",
            "use_remote_gateways": false,
            "virtual_network_name": "sg-sea-prd-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnet-peer3to1-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01/virtualNetworkPeerings/sg-sea-dmgmt-peer3to1-01",
            "name": "sg-sea-dmgmt-peer3to1-01",
            "remote_virtual_network_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-dmgmt-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-dmgmt-vnet-01",
            "resource_group_name": "sg-sea-nonprd-rsg-01",
            "use_remote_gateways": false,
            "virtual_network_name": "sg-sea-nonprd-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "tf-vnet-peer3to2-dmgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-nonprd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-nonprd-vnet-01/virtualNetworkPeerings/sg-sea-dmgmt-peer3to2-01",
            "name": "sg-sea-dmgmt-peer3to2-01",
            "remote_virtual_network_id": "/subscriptions/0da0b47d-2014-4004-8b29-2795334e34da/resourceGroups/sg-sea-prd-rsg-01/providers/Microsoft.Network/virtualNetworks/sg-sea-prd-vnet-01",
            "resource_group_name": "sg-sea-nonprd-rsg-01",
            "use_remote_gateways": false,
            "virtual_network_name": "sg-sea-nonprd-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.tf-rg",
            "azurerm_virtual_network.tf-vnet"
          ]
        }
      ]
    }
  ]
}